--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.20.5",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^6.2.0",
     "node-sass": "5.0.1",
